# miniphysics

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt
include/rush/core/: renderer.hpp  scene.hpp  shader.hpp
include/rush/entity/: camera.hpp  entity.hpp  mesh.hpp  model.hpp  object.hpp
include/rush/mem/: object_repository.hpp
include/rush/util/: log.h  resource_loader.hpp  shader_loader.hpp
include/rush/world/: terrain.hpp
shader/: crosshair.vs  default.fs  default.vs
shaders/: basic.fs  basic.vs  grid.fs  grid.vs  light.fs  light.vs  something.frag
src/: common.h  game.cpp  game.h  main.cpp  math.cpp  math.h  shader.cpp  shader.h
src/core/: renderer.cpp  scene.cpp  shader.cpp
src/entity/: camera.cpp  mesh.cpp  object.cpp
src/util/: log.c  resource_loader.cpp  shader_loader.cpp
src/world/: grid.cpp
temp/: CMakeLists.txt
temp/include/rush/core/: renderer.hpp  scene.hpp
temp/include/rush/entity/: camera.hpp  object.hpp
temp/include/rush/mem/: object_repository.hpp
temp/include/rush/object/: mesh.hpp
temp/include/rush/util/: shader_loader.hpp
temp/include/rush/world/: grid.hpp
temp/shaders/: basic.fs  basic.vs
temp/src/: main.cpp
temp/src/core/: renderer.cpp
temp/src/entity/: camera.cpp  entity.cpp  object.cpp
temp/src/mem/: object_repository.cpp
temp/src/util/: log.c  resource_loader.cpp
